<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lesson</string>

    <!-- Week and Day Views -->
    <string name="week_schedule">Week Schedule</string>
    <string name="tap_day_view_lessons">Tap a day to view lessons</string>
    <string name="no_lessons">No lessons</string>

    <!-- Lesson Management -->
    <string name="add_new_lesson">Add New Lesson</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="delete_lesson">Delete Lesson</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="enter_lesson_name">Enter lesson name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="free">No class</string>
    <string name="free_lesson">Free Lesson</string>
    <string name="lesson_added_to">Lesson added to %s</string>
    <string name="free_lesson_added_to">Free lesson added to %s</string>
    <string name="lesson_updated">Lesson updated</string>
    <string name="lesson_deleted">Lesson deleted</string>
    <string name="delete_lesson_all_weeks">Delete this lesson from all weeks?</string>

    <!-- Notes -->
    <string name="note">Note</string>
    <string name="enter_note">Enter note...</string>
    <string name="note_for">Note for %s</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_confirmation">Delete this note?</string>
    <string name="add_image">Add Image</string>
    <string name="image">Image</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_image">Delete</string>
    <string name="remove_image_confirmation">Are you sure you want to remove this image?</string>
    <string name="image_added">Image added</string>
    <string name="image_removed">Image removed</string>
    <string name="close">Close</string>
    <string name="adding_image">Do you want to add this image?</string>
    <string name="add_image_confirmation">Do you want to add this image?</string>

    <!-- Weekdays -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!-- Language -->
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="language_changed">Language changed to %s</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="delete_all_lessons_and_notes">Delete all lessons and notes</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="delete_all_data_confirmation">Are you sure you want to delete all lessons and notes? This action cannot be undone.</string>
    <string name="delete_timetable_confirmation">Do you also want to delete the timetable?</string>
    <string name="all_data_deleted">All data deleted</string>
    <string name="timetable_deleted">Timetable deleted</string>

    <!-- Common Actions -->
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Week Format -->
    <string name="week">Week</string>

    <!-- Lesson Selection -->
    <string name="select_day_for_lesson">Select day for lesson</string>
    <string name="select_lesson_number">Select lesson number</string>

    <!-- New strings for timetable -->
    <string name="all_slots_used">All lesson slots are used</string>
    <string name="delete_timetable">Delete Timetable</string>
    <string name="edit">Edit</string>
    <string name="email_body">Email Body</string>
    <string name="email_subject">Email Subject</string>
    <string name="save_times">Save Times</string>
    <string name="suggest_features">Suggest Features</string>
    <string name="change_reminder">Change Reminder</string>
    <string name="reminder_removed">Reminder removed</string>
    <string name="reminder_time_past">Please select a future time for reminder</string>
    <string name="no_timetable_set">No Timetable Set</string>
    <string name="no_timetable_message">Please set up lesson times first. Do you want to set up the timetable now?</string>
    <string name="set_up_timetable">Set Up Timetable</string>
    <string name="manage_lesson_times">Manage Lesson Times</string>
    <string name="add_time">Add</string>
    <string name="start_time_default">Start Time</string>
    <string name="end_time_default">End Time</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_confirmation">Are you sure you want to delete this image?</string>
    <string name="confirmation">Confirmation</string>
    <string name="image_preview">Image Preview</string>
    <string name="add_new_lesson_time">Add</string>

    <string name="set_reminder">Set Reminder</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="enable_reminder">Enable reminder</string>
    <string name="reminder_set_for">Reminder set for %s</string>
    <string name="reminder_canceled">Reminder canceled</string>
    <string name="spanish">Spanish</string>
    <string name="reminder_set">Reminder set!</string>
    <string name="reminder_time_passed">Reminder time has already passed</string>

    <string name="ask_for_feature">Ask for a Feature</string>
    <string name="feature_request">Feature Request</string>
    <string name="feature_request_message">Share your idea or suggestion:</string>
    <string name="send_feature_request">Send</string>
    <string name="feature_request_sent">Feature request sent successfully!</string>
    <string name="feature_request_too_short">Please enter at least 5 characters</string>
    <string name="feature_request_too_long">Please limit your message to 200 characters</string>
    <string name="feature_request_limit">Please wait a minute before sending another feature request</string>
    <string name="feature_request_error">Failed to send feature request. Please try again.</string>
</resources>